<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="148dp"
        android:layout_height="142dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btn_eee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="26dp"
        android:layout_weight="1"
        android:background="@color/colorButton"
        android:padding="40dp"
        android:text="@string/txt_eee"
        android:textColor="@color/colorText"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_cse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="26dp"
        android:layout_weight="1"
        android:background="@color/colorButton"
        android:padding="40dp"
        android:text="@string/txt_cse"
        android:textColor="@color/colorText"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:background="@color/colorButton"
        android:padding="40dp"
        android:text="@string/txt_me"
        android:textColor="@color/colorText"
        android:textSize="30sp" />
</RelativeLayout>